completed setup of Blazor server app and Authentication related to it

--- a/BookStoreApp.Blazor.ServerUI/_Imports.razor
+++ b/BookStoreApp.Blazor.ServerUI/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using NSwag
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,3 +9,5 @@
 @using Microsoft.JSInterop
 @using BookStoreApp.Blazor.ServerUI
 @using BookStoreApp.Blazor.ServerUI.Shared
+@using BookStoreApp.Blazor.ServerUI.Services.Base
+@using BookStoreApp.Blazor.ServerUI.Services.Authentication
