--- a/BookStoreApp.Blazor.ServerUI/Shared/NavMenu.razor
+++ b/BookStoreApp.Blazor.ServerUI/Shared/NavMenu.razor
@@ -23,6 +23,15 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> Log out 
                     </NavLink>
                 </div>
+
+                <hr />
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="authors/">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Authors
+                    </NavLink>
+                </div>
+
             </Authorized>
 
 
@@ -41,7 +50,6 @@
                 </div>
 
             </NotAuthorized>
-
 
 
         </AuthorizeView>
