extended the http client in the bookstoreapp project to be able to pull all authors from the server using the rest api project that I made earlier

--- a/BookStoreApp.Blazor.ServerUI/_Imports.razor
+++ b/BookStoreApp.Blazor.ServerUI/_Imports.razor
@@ -11,3 +11,5 @@
 @using BookStoreApp.Blazor.ServerUI.Shared
 @using BookStoreApp.Blazor.ServerUI.Services.Base
 @using BookStoreApp.Blazor.ServerUI.Services.Authentication
+@using BookStoreApp.Blazor.ServerUI.Services
+
