--- a/BookStoreApp.Blazor.ServerUI/Pages/Authors/index.razor
+++ b/BookStoreApp.Blazor.ServerUI/Pages/Authors/index.razor
@@ -1,10 +1,10 @@
-﻿@page "/authors/"
+﻿@page "/authors/index"
 
-@inject IClient httpClient
+@inject IAuthorService authorService
 
 <h3>index</h3>
 
-@if(Model == null)
+@if(Authors == null)
 {
     <div class="alert alert-info">
         <h4>Loading Data...</h4>
@@ -40,9 +40,14 @@ else
 
 @code {
     private List<AuthorReadOnlyDTO> Authors;
+    private Response<List<AuthorReadOnlyDTO>> response = new Response<List<AuthorReadOnlyDTO>> {Success = true };
 
     protected override async Task OnInitializedAsync()
     {
-        Authors = await (httpClient.AuthorsAllAsync()).ToList();
+        var response = await authorService.GetAllAuthors();
+        if (response.Success)
+        {
+            Authors = response.Data;
+        }
     }
 }
