creating an author works. creates a new author using the api. Not processing the response code and its considering it an exception fix on next commit

--- a/BookStoreApp.Blazor.ServerUI/Pages/Authors/index.razor
+++ b/BookStoreApp.Blazor.ServerUI/Pages/Authors/index.razor
@@ -1,8 +1,17 @@
-﻿@page "/authors/index"
+﻿@page "/authors/"
 
 @inject IAuthorService authorService
+@inject IClient httpClient
 
 <h3>index</h3>
+
+
+@if(response.Success == false)
+{
+    <div class="alert alert-danger">
+        <h4>@response.Message</h4>
+    </div>
+}
 
 @if(Authors == null)
 {
